MESSAGE(STATUS "CMake version: ${CMAKE_VERSION}")

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

PROJECT(zonciu)

SET(CMAKE_BUILD_TYPE RELEASE)

#Check platform, support Windows and Linux
IF(UNIX)
    MESSAGE(STATUS "Linux Platform")
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -Wall")
ELSEIF(WIN32)
    MESSAGE(STATUS "Windows Platform")
    ADD_DEFINITIONS(-D_ENABLE_ATOMIC_ALIGNMENT_FIX)
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} /Od /W3 /MTd")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} /O2 /W3 /MT")
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ELSE()
    MESSAGE(FATAL_ERROR "Unsupported Platform ${CMAKE_SYSTEM_NAME}")
ENDIF()

#Set compile mode

ADD_SUBDIRECTORY(test)

